# uavplan

./: .gitattributes  .gitignore  ARTIFACT_EVALUATION.md  AUDIT_HEAD.md  BASE_PY_VERIFICATION.md  BENCHMARK_GUIDE.md  BEST_PAPER_SCORECARD.md  CITATION.bib  CLAUDE.md  CONTRIBUTIONS.md  DELIVERY.md  DOCUMENTATION_CHECKLIST.md  Dockerfile  ETHICS.md  EVALUATION_FRAMEWORK.md  FINAL_STATUS.md  FINAL_VERIFICATION.txt  FINAL_VIZ_SAFETY_SUPERPROMPT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LAUNCH_PROMPT.md  LICENSE  MERGE_REPORT_v0.2.md  Makefile  PROJECT_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  README_OLD.md  REQUEST_FULFILLMENT.md  SESSION_COMPLETE.md  USAGE.md  V1_MISSION_UPGRADE_SUPERPROMPT.md  VIDEOS_FOLDER_GUIDE.md  VV_AUDIT_REPORT.md  pyproject.toml  requirements-lock.txt  ΟΛΟΚΛΗΡΩΜΕΝΟΣ_ΟΔΗΓΟΣ_GR.md
.github/: copilot-instructions.md
demo_results/: aggregates.csv  episodes.jsonl
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUDIT_HEAD.md  COMMIT_PLAN.md  CONTRACTS.md  DATASHEET.md  DECISIONS.md  DEMO_SCRIPT_PROFESSOR.md  METHODOLOGY_CHANGES.md  MISSION_CARDS.md  PAPER_PROTOCOL.md  PAPER_PROTOCOL_v1.md  PERFORMANCE.md  PHASE_GATES.md  PROJECT_CAPABILITIES.md  REPRODUCIBILITY.md  REQUIREMENTS.md  SCENARIO_CARDS.md  STAKEHOLDER_SYSTEM_V2.md  TECHNICAL_REFERENCE.md  TEST_PLAN.md  TRACEABILITY.md  VISUAL_TRUTH_SPEC.md
notebooks/: getting_started.ipynb
outputs/: critical_moments.json  scenario_pack_results.csv
paper/: main.docx  main.tex  references.bib
scripts/: analyze_paper_results.py  analyze_v2_paper_results.py  calibrate_paper_tracks.py  demo_benchmark.py  demo_stakeholder.py  demo_stakeholder_v2.py  episode_metrics.py  estimate_eta.py  export_artifacts.py  export_paper_artifacts.py  export_v2_artifacts.py  extract_critical_moments.py  gallery_basemap.py  gen_ablation_figures.py  gen_comparison_gif.py  gen_demo_gifs.py  gen_failure_autopsy.py  gen_fog_comparison.py  gen_hazard_cascade.py  gen_mission_impact_scatter.py  gen_piraeus_multipoi_figure.py  gen_showcase_gifs.py  gen_timeline_figure.py  gen_trajectory_heatmap.py  generate_all_scenarios.py  generate_paper_snapshots.py  mission_realism_audit.py  paper_best_paper_validation.py  poi_sensitivity.py  readiness_check.py  regenerate_paper_gifs.sh  regenerate_paper_gifs_v2.sh  regenerate_v2_paper_gifs.sh  render_episode.py  reproduce_paper.sh  risk_sensitivity_sweep.py  run_ablation_studies.py  run_fog_ablation.py  run_hard_gifs.py  run_paper_experiments.py  (+5 more)
tests/: __init__.py  conftest.py  contract_test_calibration.py  contract_test_decision_record.py  contract_test_determinism.py  contract_test_event_semantics.py  contract_test_fairness.py  contract_test_guardrail.py  contract_test_mask_parity.py  contract_test_mission_story.py  (+38 more)
(+547 files in other folders)
