[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavbench"
version = "0.0.1"
description = "UAVBench: a reproducible UAV planning benchmark framework"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8.0",
]
dev = [
  "pytest>=7.0",
  "mypy>=1.0",
  "sphinx>=7.0",
]
pipeline = [
  "osmnx>=1.9",
  "geopandas>=0.14",
  "shapely>=2.0",
  "rasterio>=1.3",
  "scipy>=1.12",
]
all = [
  "uavbench[viz,dev,pipeline]",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
uavbench = "uavbench.cli.benchmark:main"

