[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uavbench"
version = "1.0.0"
description = "UAVBench: a reproducible UAV planning benchmark framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/uavbench/uavbench"
Repository = "https://github.com/uavbench/uavbench"
Documentation = "https://github.com/uavbench/uavbench#documentation"

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8.0",
]
dev = [
  "pytest>=7.0",
  "mypy>=1.0",
]
pipeline = [
  "osmnx>=1.9",
  "geopandas>=0.14",
  "shapely>=2.0",
  "rasterio>=1.3",
]
all = [
  "uavbench[viz,dev,pipeline]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
uavbench = "uavbench.cli.benchmark:main"
